--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 }
             }
             
-            scrollToBottom(true); // Force scroll on initial load
+            // NO SCROLL HERE - Let user read in peace
         }
         
         function addMessageToUI(message) {
