--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             <div class="entity-portraits">
                 <div class="portrait-container" id="marcPortrait">
                     <div class="portrait-glow"></div>
-                    <img src="YOUR_MARC_IMAGE_URL_HERE" alt="Marc" class="portrait marc">
+                    <img src="https://static.wixstatic.com/media/e2da02_58d19777db7c4731a695f5b0e77ec4cd~mv2.jpeg" alt="Marc" class="portrait marc">
                     <div class="portrait-stats">
                         <div style="color: #00ffff; font-weight: bold; margin-bottom: 8px; text-align: center;">MARC STATISTICS</div>
                         <div class="stat-row">
@@ -576,7 +576,7 @@
                 </div>
                 <div class="portrait-container" id="dokwonPortrait">
                     <div class="portrait-glow"></div>
-                    <img src="YOUR_DOKWON_IMAGE_URL_HERE" alt="Do Kwon" class="portrait dokwon">
+                    <img src="https://static.wixstatic.com/media/e2da02_8f3a573cfd95450799f534bc2a1468b2~mv2.webp" alt="Do Kwon" class="portrait dokwon">
                     <div class="portrait-stats">
                         <div style="color: #ff9500; font-weight: bold; margin-bottom: 8px; text-align: center;">DO KWON STATISTICS</div>
                         <div class="stat-row">
@@ -603,7 +603,7 @@
                 </div>
                 <div class="portrait-container" id="zuckPortrait">
                     <div class="portrait-glow"></div>
-                    <img src="YOUR_ZUCK_IMAGE_URL_HERE" alt="Zuck" class="portrait zuck">
+                    <img src="https://static.wixstatic.com/media/e2da02_67f629377e194802a4bf725f4fa0dc1c~mv2.jpg" alt="Zuck" class="portrait zuck">
                     <div class="portrait-stats">
                         <div style="color: #4267b2; font-weight: bold; margin-bottom: 8px; text-align: center;">ZUCK STATISTICS</div>
                         <div class="stat-row">
@@ -693,19 +693,19 @@
             marc: {
                 name: "MARC",
                 color: "#00ffff",
-                avatar: "YOUR_MARC_IMAGE_URL_HERE",
+                avatar: "https://static.wixstatic.com/media/e2da02_58d19777db7c4731a695f5b0e77ec4cd~mv2.jpeg",
                 portraitId: "marcPortrait"
             },
             dokwon: {
                 name: "DO KWON",
                 color: "#ff9500",
-                avatar: "YOUR_DOKWON_IMAGE_URL_HERE",
+                avatar: "https://static.wixstatic.com/media/e2da02_8f3a573cfd95450799f534bc2a1468b2~mv2.webp",
                 portraitId: "dokwonPortrait"
             },
             zuck: {
                 name: "ZUCK",
                 color: "#4267b2",
-                avatar: "YOUR_ZUCK_IMAGE_URL_HERE",
+                avatar: "https://static.wixstatic.com/media/e2da02_67f629377e194802a4bf725f4fa0dc1c~mv2.jpg",
                 portraitId: "zuckPortrait"
             }
         };
