--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
                     <div style="display: grid; gap: 25px;">
                         <div style="border: 1px solid #333; padding: 20px; background: rgba(0, 0, 0, 0.5);">
                             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                                <div style="width: 60px; height: 60px; border: 2px solid #00ffff; background: #000;"></div>
+                                <img src="https://static.wixstatic.com/media/e2da02_58d19777db7c4731a695f5b0e77ec4cd~mv2.jpeg" style="width: 60px; height: 60px; border: 2px solid #00ffff; object-fit: cover;">
                                 <div>
                                     <div style="color: #00ffff; font-size: 16px; font-weight: bold;">MARC ANDREESSEN</div>
                                     <div style="color: #888; font-size: 12px;">Tech Entity - Accelerationist</div>
@@ -1135,7 +1135,7 @@
                         
                         <div style="border: 1px solid #333; padding: 20px; background: rgba(0, 0, 0, 0.5);">
                             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                                <div style="width: 60px; height: 60px; border: 2px solid #ff9500; background: #000;"></div>
+                                <img src="https://static.wixstatic.com/media/e2da02_8f3a573cfd95450799f534bc2a1468b2~mv2.webp" style="width: 60px; height: 60px; border: 2px solid #ff9500; object-fit: cover;">
                                 <div>
                                     <div style="color: #ff9500; font-size: 16px; font-weight: bold;">DO KWON</div>
                                     <div style="color: #888; font-size: 12px;">Crypto Entity - On The Run</div>
@@ -1148,7 +1148,7 @@
                         
                         <div style="border: 1px solid #333; padding: 20px; background: rgba(0, 0, 0, 0.5);">
                             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                                <div style="width: 60px; height: 60px; border: 2px solid #4267b2; background: #000;"></div>
+                                <img src="https://static.wixstatic.com/media/e2da02_67f629377e194802a4bf725f4fa0dc1c~mv2.jpg" style="width: 60px; height: 60px; border: 2px solid #4267b2; object-fit: cover;">
                                 <div>
                                     <div style="color: #4267b2; font-size: 16px; font-weight: bold;">MARK ZUCKERBERG</div>
                                     <div style="color: #888; font-size: 12px;">Meta Entity - Glitching</div>
