--- a/index.html
+++ b/index.html
@@ -548,6 +548,10 @@
                     <svg class="github-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/></svg>
                     Twitch
                 </a>
+                <a href="https://pump.fun/coin/H2BpWg23zQkf7gtMPFHSkuDH5fSNqDsyXHK9aUrVpump" target="_blank" class="github-button">
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6863e813b739082547cfec7a_BBqyuDPm_400x400.png" alt="pump.fun" style="width: 16px; height: 16px;">
+                    pump.fun
+                </a>
                 <a href="https://github.com/ablenesi" target="_blank" class="github-button">
                     <svg class="github-icon" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
