--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuro Backrooms | $BACKROOMS</title>
+    <title>Neuro Backrooms</title>
+    <link rel="icon" type="image/png" href="https://static.wixstatic.com/media/e2da02_dbd08d8603e14ae18bd5ba156bb9ac6e~mv2.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
         
