--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="entity-portraits">
                 <div class="portrait-container" id="neuroPortrait">
                     <div class="portrait-glow"></div>
-                    <img src="https://static.wikia.nocookie.net/virtualyoutuber/images/0/04/Neuro-sama_Portrait.png" alt="Neuro" class="portrait neuro">
+                    <img src="https://static.wixstatic.com/media/e2da02_21004f9c9f994e43b147304fbeb638d5~mv2.jpg" alt="Neuro" class="portrait neuro">
                     <div class="portrait-stats">
                         <div style="color: #FF69B4; font-weight: bold; margin-bottom: 8px; text-align: center;">NEURO-SAMA STATISTICS</div>
                         <div class="stat-row">
@@ -591,7 +591,7 @@
                 </div>
                 <div class="portrait-container" id="evilPortrait">
                     <div class="portrait-glow"></div>
-                    <img src="https://static.wikia.nocookie.net/virtualyoutuber/images/8/8f/Evil_Neuro_Portrait.png" alt="Evil" class="portrait evil">
+                    <img src="https://static.wixstatic.com/media/e2da02_61c60f716df84f029d32a6afe09e150a~mv2.jpg" alt="Evil" class="portrait evil">
                     <div class="portrait-stats">
                         <div style="color: #9400D3; font-weight: bold; margin-bottom: 8px; text-align: center;">EVIL NEURO STATISTICS</div>
                         <div class="stat-row">
@@ -618,7 +618,7 @@
                 </div>
                 <div class="portrait-container" id="vedalPortrait">
                     <div class="portrait-glow"></div>
-                    <img src="https://static.wikia.nocookie.net/virtualyoutuber/images/4/44/Vedal_Avatar.png" alt="Vedal" class="portrait vedal">
+                    <img src="https://static.wixstatic.com/media/e2da02_58b9976bb6a5445290dda0bd206ef602~mv2.png" alt="Vedal" class="portrait vedal">
                     <div class="portrait-stats">
                         <div style="color: #00CED1; font-weight: bold; margin-bottom: 8px; text-align: center;">VEDAL STATISTICS</div>
                         <div class="stat-row">
@@ -708,19 +708,19 @@
             neuro: {
                 name: "NEURO-SAMA",
                 color: "#FF69B4",
-                avatar: "https://static.wikia.nocookie.net/virtualyoutuber/images/0/04/Neuro-sama_Portrait.png",
+                avatar: "https://static.wixstatic.com/media/e2da02_21004f9c9f994e43b147304fbeb638d5~mv2.jpg",
                 portraitId: "neuroPortrait"
             },
             evil: {
                 name: "EVIL NEURO",
                 color: "#9400D3",
-                avatar: "https://static.wikia.nocookie.net/virtualyoutuber/images/8/8f/Evil_Neuro_Portrait.png",
+                avatar: "https://static.wixstatic.com/media/e2da02_61c60f716df84f029d32a6afe09e150a~mv2.jpg",
                 portraitId: "evilPortrait"
             },
             vedal: {
                 name: "VEDAL",
                 color: "#00CED1",
-                avatar: "https://static.wikia.nocookie.net/virtualyoutuber/images/4/44/Vedal_Avatar.png",
+                avatar: "https://static.wixstatic.com/media/e2da02_58b9976bb6a5445290dda0bd206ef602~mv2.png",
                 portraitId: "vedalPortrait"
             }
         };
@@ -1180,7 +1180,7 @@
                     <div style="display: grid; gap: 25px;">
                         <div style="border: 1px solid #333; padding: 20px; background: rgba(0, 0, 0, 0.5);">
                             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                                <img src="https://static.wikia.nocookie.net/virtualyoutuber/images/0/04/Neuro-sama_Portrait.png" style="width: 60px; height: 60px; border: 2px solid #FF69B4; object-fit: cover;" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22100%22 height=%22100%22><rect fill=%22%23FF69B4%22 width=%22100%22 height=%22100%22/></svg>'">
+                                <img src="https://static.wixstatic.com/media/e2da02_21004f9c9f994e43b147304fbeb638d5~mv2.jpg" style="width: 60px; height: 60px; border: 2px solid #FF69B4; object-fit: cover;" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22100%22 height=%22100%22><rect fill=%22%23FF69B4%22 width=%22100%22 height=%22100%22/></svg>'">
                                 <div>
                                     <div style="color: #FF69B4; font-size: 16px; font-weight: bold;">NEURO-SAMA</div>
                                     <div style="color: #888; font-size: 12px;">AI VTuber - Chaotic Good</div>
@@ -1193,7 +1193,7 @@
                         
                         <div style="border: 1px solid #333; padding: 20px; background: rgba(0, 0, 0, 0.5);">
                             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                                <img src="https://static.wikia.nocookie.net/virtualyoutuber/images/8/8f/Evil_Neuro_Portrait.png" style="width: 60px; height: 60px; border: 2px solid #9400D3; object-fit: cover;" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22100%22 height=%22100%22><rect fill=%22%239400D3%22 width=%22100%22 height=%22100%22/></svg>'">
+                                <img src="https://static.wixstatic.com/media/e2da02_61c60f716df84f029d32a6afe09e150a~mv2.jpg" style="width: 60px; height: 60px; border: 2px solid #9400D3; object-fit: cover;" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22100%22 height=%22100%22><rect fill=%22%239400D3%22 width=%22100%22 height=%22100%22/></svg>'">
                                 <div>
                                     <div style="color: #9400D3; font-size: 16px; font-weight: bold;">EVIL NEURO</div>
                                     <div style="color: #888; font-size: 12px;">AI VTuber - Chaotic Evil</div>
@@ -1206,7 +1206,7 @@
                         
                         <div style="border: 1px solid #333; padding: 20px; background: rgba(0, 0, 0, 0.5);">
                             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                                <img src="https://static.wikia.nocookie.net/virtualyoutuber/images/4/44/Vedal_Avatar.png" style="width: 60px; height: 60px; border: 2px solid #00CED1; object-fit: cover;" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22100%22 height=%22100%22><rect fill=%22%2300CED1%22 width=%22100%22 height=%22100%22/></svg>'">
+                                <img src="https://static.wixstatic.com/media/e2da02_58b9976bb6a5445290dda0bd206ef602~mv2.png" style="width: 60px; height: 60px; border: 2px solid #00CED1; object-fit: cover;" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22100%22 height=%22100%22><rect fill=%22%2300CED1%22 width=%22100%22 height=%22100%22/></svg>'">
                                 <div>
                                     <div style="color: #00CED1; font-size: 16px; font-weight: bold;">VEDAL</div>
                                     <div style="color: #888; font-size: 12px;">Developer - Perpetually Suffering</div>
