--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     <div class="terminal-container">
         <div class="header">
             <div style="position: absolute; top: 15px; right: 20px; display: flex; gap: 10px; z-index: 100;">
-                <a href="https://twitter.com/neurosamaai" target="_blank" class="github-button">
+                <a href="https://x.com/NeuroBackrooms" target="_blank" class="github-button">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/688401711f7c1c43849d13a6_HIMACZhOn7YJ71dTu-actor-2fSSfmZramPBO73OK-iBihnF3pbp-dexpng%20(2).png" alt="Twitter" style="width: 16px; height: 16px;">
                     Twitter
                 </a>
@@ -549,7 +549,7 @@
                     <svg class="github-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/></svg>
                     Twitch
                 </a>
-                <a href="https://pump.fun/coin/" target="_blank" class="github-button">
+                <a href="https://pump.fun/coin/H2BpWg23zQkf7gtMPFHSkuDH5fSNqDsyXHK9aUrVpump" target="_blank" class="github-button">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6863e813b739082547cfec7a_BBqyuDPm_400x400.png" alt="pump.fun" style="width: 16px; height: 16px;">
                     pump.fun
                 </a>
