--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                     <svg class="github-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/></svg>
                     Twitch
                 </a>
-                <a href="https://pump.fun/coin/H2BpWg23zQkf7gtMPFHSkuDH5fSNqDsyXHK9aUrVpump" target="_blank" class="github-button">
+                <a href="https://pump.fun/coin/" target="_blank" class="github-button">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6863e813b739082547cfec7a_BBqyuDPm_400x400.png" alt="pump.fun" style="width: 16px; height: 16px;">
                     pump.fun
                 </a>
